# tilebox-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  buf.gen.datasets.yaml  buf.gen.worker-internal.yaml  buf.gen.workflows.yaml  build.sh  copy_protobuf.py  matrix.toml  publish.py  pyproject.toml  tests.sh
tilebox-datasets/: README.md  pyproject.toml
tilebox-datasets/tests/: test_aio.py  test_client.py  test_protobuf_xarray.py  test_timeseries.py
tilebox-datasets/tests/data/: collection.py  data_access.py  datapoint.py  datasets.py  pagination.py  test_collection.py  test_data_access.py  test_datapoint.py  test_datasets.py  test_pagination.py  test_time_interval.py  time_interval.py  well_known_types.py
tilebox-datasets/tests/example_dataset/: example_dataset.proto  example_dataset_pb2.py  example_dataset_pb2.pyi
tilebox-datasets/tests/protobuf_conversion/: test_geobuf.py  test_protobuf_xarray.py  test_to_protobuf.py
tilebox-datasets/tests/query/: datapoint.py  pagination.py  test_datapoint.py  test_pagination.py  test_time_interval.py  time_interval.py
tilebox-datasets/tests/testdata/geobuf/: multipolygon.binpb  multipolygon_with_holes.binpb  polygon.binpb
tilebox-datasets/tilebox/datasets/: __init__.py  aio.py  client.py  group.py  message_pool.py  pagination.py  progress.py  protobuf_xarray.py  service.py  timeseries.py  uuid.py
tilebox-datasets/tilebox/datasets/aio/: __init__.py  client.py  dataset.py  pagination.py  service.py  timeseries.py
tilebox-datasets/tilebox/datasets/buf/validate/: validate_pb2.py  validate_pb2.pyi
tilebox-datasets/tilebox/datasets/data/: __init__.py  collection.py  data_access.py  datapoint.py  datasets.py  pagination.py  time_interval.py  timeseries.py  uuid.py
tilebox-datasets/tilebox/datasets/datasets/v1/: collections_connect.py  collections_pb2.py  (+22 more)
tilebox-datasets/tilebox/datasets/datasetsv1/: collections_pb2.py  collections_pb2.pyi  collections_pb2_grpc.py  core_pb2.py  core_pb2.pyi  data_access_pb2.py  data_access_pb2.pyi  data_access_pb2_grpc.py  data_ingestion_pb2.py  data_ingestion_pb2.pyi  data_ingestion_pb2_grpc.py  dataset_type_pb2.py  dataset_type_pb2.pyi  datasets_pb2.py  datasets_pb2.pyi  datasets_pb2_grpc.py  tilebox_pb2.py  tilebox_pb2.pyi  tilebox_pb2_grpc.py  timeseries_pb2.py  timeseries_pb2.pyi  well_known_types_pb2.py  well_known_types_pb2.pyi
tilebox-datasets/tilebox/datasets/protobuf_conversion/: field_types.py  geobuf.py  protobuf_xarray.py  to_protobuf.py
tilebox-datasets/tilebox/datasets/query/: __init__.py  id_interval.py  pagination.py  time_interval.py
tilebox-datasets/tilebox/datasets/sync/: client.py  dataset.py  pagination.py  service.py  timeseries.py
tilebox-grpc/: README.md  pyproject.toml
tilebox-grpc/_tilebox/grpc/: channel.py  error.py  pagination.py  producer_consumer.py  public.py  replay.py
tilebox-grpc/_tilebox/grpc/aio/: channel.py  error.py  pagination.py  producer_consumer.py  syncify.py
tilebox-grpc/tests/: test_channel.py  test_error.py
tilebox-grpc/tests/aio/: test_channel.py  test_error.py  test_producer_consumer.py  test_syncify.py
tilebox-storage/: README.md  pyproject.toml
tilebox-storage/tests/: conftest.py  storage_data.py  test_granule.py  test_providers.py  test_storage_client.py
tilebox-storage/tilebox/storage/: __init__.py  _sync.py  aio.py  granule.py  providers.py
tilebox-workflows/: README.md  pyproject.toml  tilebox_worker.py
tilebox-workflows/tests/: tasks_data.py  test_cache.py  test_data.py  test_publish_discover.py  test_task.py
tilebox-workflows/tests/automations/: test_client.py  test_cron.py  test_storage_event.py
tilebox-workflows/tests/clients/: test_clusters.py  test_recurrent_tasks.py
tilebox-workflows/tests/clusters/: test_client.py
tilebox-workflows/tests/jobs/: test_client.py
tilebox-workflows/tests/observability/: test_execution_attributes.py  test_tracing.py
tilebox-workflows/tests/proto/: __init__.py  test.proto  test_pb2.py  test_pb2.pyi
tilebox-workflows/tests/recurrent_tasks/: test_client.py  test_cron.py  test_storage_event.py
tilebox-workflows/tests/runner/: test_runner.py  test_runner_module.py  test_worker_rpc_server.py  test_worker_rpc_v1.py
tilebox-workflows/tests/workflows/: test_client.py
tilebox-workflows/tilebox/workflows/: __init__.py  aio.py  cache.py  client.py  data.py  interceptors.py  runner.py  task.py  timeseries.py
tilebox-workflows/tilebox/workflows/automations/: __init__.py  client.py  cron.py  service.py  storage_event.py
tilebox-workflows/tilebox/workflows/clients/: client.py  clusters.py  jobs.py  recurrent_tasks.py  tasks.py
tilebox-workflows/tilebox/workflows/clusters/: client.py  service.py
tilebox-workflows/tilebox/workflows/formatting/: job.py
tilebox-workflows/tilebox/workflows/jobs/: client.py  service.py  telemetry_service.py
tilebox-workflows/tilebox/workflows/observability/: execution_attributes.py  logging.py  metrics.py  tracing.py
tilebox-workflows/tilebox/workflows/recurrent_tasks/: __init__.py  aio.py  client.py  cron.py  recurrent_task.py  service.py  storage_event.py
tilebox-workflows/tilebox/workflows/runner/: __init__.py  __main__.py  executor.py  runner.py  runtime.py  task_runner.py  task_service.py  worker_rpc_server.py  worker_rpc_v1.py  worker_server.py  worker_service.py
tilebox-workflows/tilebox/workflows/timeseries/: __init__.py  aio.py  timeseries.py
tilebox-workflows/tilebox/workflows/workflows/: __init__.py  client.py  service.py
tilebox-workflows/tilebox/workflows/workflowsv1/: automation_pb2.py  automation_pb2.pyi  automation_pb2_grpc.py  core_pb2.py  core_pb2.pyi  diagram_pb2.py  diagram_pb2.pyi  diagram_pb2_grpc.py  job_pb2.py  job_pb2.pyi  job_pb2_grpc.py  recurrent_task_pb2.py  recurrent_task_pb2.pyi  recurrent_task_pb2_grpc.py  task_pb2.py  task_pb2.pyi  task_pb2_grpc.py  timeseries_pb2.py  timeseries_pb2.pyi  workflows_pb2.py  workflows_pb2.pyi  workflows_pb2_grpc.py
tilebox-workflows/tilebox_publish_discover/: __init__.py  __main__.py  discover.py
(+67 files in other folders)
