[project]
name = "tilebox-datasets"
dynamic = ["version"]
description = "Access Tilebox datasets from Python"
authors = [{ name = "Tilebox, Inc.", email = "support@tilebox.com" }]
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dependencies = [
    "tilebox-grpc>=0.28.0",
    # cftime is a dependency of xarray, and we need this version at least to support numpy v2.0
    "cftime>=1.6.4",
    # below version pins are some minimum sane versions that we tested against to make sure they are working
    "numpy>=1.24",
    "xarray>=2023.11",
    "loguru>=0.7",
    "tqdm>=4.65",
    "pandas>=2.1",
    "shapely>=2",
    "promise>=2.3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.112.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest>=8.3.2",
]


[project.urls]
Homepage = "https://tilebox.com"
Documentation = "https://docs.tilebox.com/datasets/introduction"

[tool.hatch.build.targets.sdist]
packages = ["tilebox"]

[tool.hatch.build.targets.wheel]
packages = ["tilebox"]

[tool.coverage.run]
omit = ["tilebox/*/datasets/v1/*", "tilebox/*/tilebox/v1/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-Wall -Werror --import-mode importlib"
asyncio_default_fixture_loop_scope = "function"


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
