[project]
name = "tilebox-grpc"
dynamic = ["version"]
description = "GRPC / Protocol Buffers functions for Tilebox"
authors = [{ name = "Tilebox, Inc.", email = "support@tilebox.com" }]
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dependencies = [
    # our version of the protobuf compiler generates code that requires grpcio 1.63.0 or higher
    # grpcio 1.65.1 contains a bug that produces lots of logging noise: https://github.com/grpc/grpc/issues/37178
    # grpcio 1.66 also has this bug on MacOS still: https://github.com/grpc/grpc/issues/37642
    "grpcio>=1.67",
    "grpcio-status>=1.67",
    "protobuf>=5",
    # for the libraries below we specify a minimum, tested to be working version
    "lz4>=4",
    "anyio>=4",
    "nest-asyncio>=1.5.0",
]


[dependency-groups]
dev = ["pytest-asyncio>=0.24.0", "pytest-cov>=5.0.0", "pytest>=8.3.2"]

[project.urls]
Homepage = "https://tilebox.com"
Documentation = "https://docs.tilebox.com/"


[tool.hatch.build.targets.sdist]
packages = ["_tilebox"]

[tool.hatch.build.targets.wheel]
packages = ["_tilebox"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-Wall -Werror --import-mode importlib"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
