[project]
name = "tilebox-storage"
dynamic = ["version"]
description = "Storage client for Tilebox"
authors = [{ name = "Tilebox, Inc.", email = "support@tilebox.com" }]
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    "tilebox-datasets",
    "httpx>=0.27",
    "aiofile>=3.8",
    "folium>=0.15",
    "shapely>=2",
    "boto3>=1.33",
    "boto3-stubs[essential]>=1.33",
]

[project.urls]
Homepage = "https://tilebox.com"
Documentation = "https://docs.tilebox.com/"

[tool.uv]
dev-dependencies = ["moto>=5"]

[tool.hatch.build.targets.sdist]
packages = ["tilebox"]

[tool.hatch.build.targets.wheel]
packages = ["tilebox"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-Wall -Werror --import-mode importlib"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
