[tool.poetry]
name = "tilebox-storage"
version = "0.0.0"
description = "Storage client for Tilebox"
authors = ["Tilebox, Inc. <support@tilebox.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "tilebox" }]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = ">=3.10,<4"
tilebox-datasets = { path = "../tilebox-datasets" }
httpx = ">=0.27"
aiofile = ">=3.8"
folium = ">=0.15"
shapely = ">=2"
boto3 = ">=1.33"
boto3-stubs = { extras = ["essential"], version = ">=1.33" }

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-Wall -Werror"
