[tool.poetry]
name = "tilebox-workflows"
version = "0.0.0"
description = "Workflow client and task runner for Tilebox"
authors = ["Tilebox, Inc. <support@tilebox.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "tilebox" }]

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = ">=3.10,<4"
tilebox-datasets = { path = "../tilebox-datasets" }
tilebox-grpc = { path = "../tilebox-grpc" }
google-cloud-storage = ">=2.10.0"
opentelemetry-api = ">=1.25"
opentelemetry-exporter-otlp-proto-http = ">=1.25"
opentelemetry-sdk = ">=1.25"
tenacity = ">=8"
# There is an ongoing issue for a stable v2 release of betterproto: https://github.com/danielgtaylor/python-betterproto/issues/256
# The reason they didn't do it yet is that there probably be some small breaking changes for some edge case protobuf messages.
# However, we aren't using any of those edge cases, and so far the beta version has been working fine.
betterproto = "2.0.0b6"
boto3 = ">=1.33"

[tool.coverage.run]
omit = ["tilebox/workflows/workflowsv1/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-Wall -Werror"
