[project]
name = "tilebox-workflows"
dynamic = ["version"]
description = "Workflow client and task runner for Tilebox"
authors = [{ name = "Tilebox, Inc.", email = "support@tilebox.com" }]
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dependencies = [
    "tilebox-datasets",
    "tilebox-grpc>=0.28.0",
    "google-cloud-storage>=2.10",
    "opentelemetry-api>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-sdk>=1.28",
    "tenacity>=8",
    "boto3>=1.33",
]

[dependency-groups]
dev = ["hypothesis>=6.112.1", "pytest-cov>=5.0.0", "pytest>=8.3.2", "moto>=5"]

[project.urls]
Homepage = "https://tilebox.com"
Documentation = "https://docs.tilebox.com/workflows/introduction"

[tool.hatch.build.targets.sdist]
packages = ["tilebox"]

[tool.hatch.build.targets.wheel]
packages = ["tilebox"]

[tool.coverage.run]
omit = ["tilebox/workflows/workflows/v1/*"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
addopts = "-Wall -Werror --import-mode importlib"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
